Unit Tests
Add a bunch of unit tests, can someone please write unit tests for my
unit tests?